test/tests/SubclassInterface.expected
SubclassInterface.panda:4:1: error: class 'SubclassInterface' cannot subclass interface 'Intf'
1 error
