test/tests/SubclassInterface.panda
interface Intf {
}

class SubclassInterface : Intf {
}